# Camshaft

./: .gitignore  Cargo.toml  README.md
docs/: TUTORIAL.md  battle-test-results-v2.md  battle-test-results.md  battle-tests.md  real-agent-test.md
docs/examples/: auth-plan.yaml  auth-sprint.yaml  migration-plan.yaml  q2-roadmap.yaml
docs/superpowers/specs/: 2026-04-11-camshaft-gantt-planner-design.md
scripts/: generate_cover.py  visualize.py
skill/: SKILL.md
src/: critical_chain.rs  error.rs  main.rs  modes.rs  plan.rs
src/commands/: add.rs  analyze.rs  bulk.rs  diff.rs  evm.rs  export.rs  import.rs  init.rs  level.rs  mod.rs  optimize.rs  query.rs  remove.rs  risk.rs  sprint.rs  task.rs  template.rs  validate.rs  velocity.rs
tests/: cli_tests.rs
