[package]
name = "camshaft"
version = "0.1.0"
edition = "2021"
description = "GanttML-powered planning engine for AI code agents"
license = "MIT"
repository = "https://github.com/thekozugroup/Camshaft"
keywords = ["gantt", "planning", "scheduling", "ai", "agent"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "camshaft"
path = "src/main.rs"

[dependencies]
gantt_ml = { path = "../GanttML", features = ["agentic", "file-io"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
